force-app/main/default/objects/Sync_Filter__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equal To</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does Not Contain</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less or Equal</fullName>
            </value>
            <value>
                <fullName>Greater or Equal</fullName>
            </value>
            <value>
                <fullName>Excludes</fullName>
            </value>
            <value>
                <fullName>Includes</fullName>
            </value>
            <value>
                <fullName>Within</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>