force-app/main/default/objects/Sync_Filter__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>